--- a/hw/assignment1/two_layer_net.ipynb
+++ b/hw/assignment1/two_layer_net.ipynb
@@ -141,9 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference between your loss and correct loss:\n",
+      "0.031374274085946174\n"
+     ]
+    }
+   ],
    "source": [
     "loss, _ = net.loss(X, y, reg=0.05)\n",
     "correct_loss = 1.30378789133\n",
